# github-client-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  asio_thread_pool.cc  asio_thread_pool.hpp  base64.cc  base64.hpp  cert.hpp  client.cc  connection.cc  connection.hpp  follower_ns.hpp  http_client.cc  http_client.hpp  json_http_client.cc  password_session.cc  password_session.hpp  simple_json_response.cc  simple_json_response.hpp  uri.cc  uri.hpp
cmake/: clang_format.cmake
cmake/Hunter/: config.cmake
cmd/: CMakeLists.txt  followers.cc  followers.hpp  main.cc
errors/: illegal_uri_exception.cc
include/github-client/: client.hpp  follower.hpp  headers.hpp  json_http_client.hpp  json_response.hpp  session.hpp  uri.hpp
include/github-client/errors/: illegal_uri_exception.hpp
integration_tests/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  asio_thread_pool.test.cc  base64_test.cc  client.test.cc  uri_test.cc
tests/mock/: json_http_client.mock.hpp
